tried fixing scaling on ios again

--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -184,7 +184,7 @@ body {
 
 
 header {
-  height: calc(var(--vh, 1vh) * 100); /* Gebruik aangepaste hoogte voor iOS */
+  height: 900px; /* Gebruik aangepaste hoogte voor iOS */
   background-image: url(images/hero-header.jpg);
   background-size: cover;
   background-position: center center;
